Added GPS support (not tested) Removed SPI declarations since SPI is not available on naze32 Fixed a bug in STM32F10x\pios_usart.c: the usart_dev structure is not set to zero, leading to an hardfault by calling usart_dev->tx_out_cb Code cleanup for easier comparison with git://git.openpilot.org/OpenPilot.git Added 'Crossworks for arm' project for naze32

--- a/flight/Naze32/Makefile
+++ b/flight/Naze32/Makefile
@@ -70,7 +70,7 @@ FLASH_TOOL = OPENOCD
 # Optional module and driver defaults
 USE_CAMERASTAB ?= YES
 USE_COMUSBBRIDGE ?= NO
-USE_GPS ?= NO
+USE_GPS ?= YES
 USE_TXPID ?= YES
 USE_I2C ?= YES
 USE_USB ?= NO
