Global defines for FW_BANK_BASE/EE_BANK_BASE Crossworks project now uses OpenPilot LD script

--- a/flight/Naze32/Makefile
+++ b/flight/Naze32/Makefile
@@ -451,6 +451,11 @@ DEBUGF = dwarf-2
 CDEFS = -DSTM32F10X_$(MODEL)
 CDEFS += -DUSE_STDPERIPH_DRIVER
 CDEFS += -DUSE_$(BOARD)
+CDEFS += -DFW_BANK_BASE=$(FW_BANK_BASE)
+CDEFS += -DFW_BANK_SIZE=$(FW_BANK_SIZE)
+CDEFS += -DFW_DESC_SIZE=$(FW_DESC_SIZE)
+CDEFS += -DEE_BANK_BASE=$(EE_BANK_BASE)
+CDEFS += -DEE_BANK_SIZE=$(EE_BANK_SIZE)
 ifeq ($(ENABLE_DEBUG_PINS), YES)
 CDEFS += -DPIOS_ENABLE_DEBUG_PINS
 endif
@@ -573,6 +578,8 @@ LDFLAGS += -lc
 LDFLAGS += $(patsubst %,-l%,$(EXTRA_LIBS))
 LDFLAGS += $(MATH_LIB)
 LDFLAGS += -lc -lgcc
+LDFLAGS += -Wl,--defsym=FW_BANK_BASE=$(FW_BANK_BASE) -Wl,--defsym=FW_BANK_SIZE=$(FW_BANK_SIZE) -Wl,--defsym=FW_DESC_SIZE=$(FW_DESC_SIZE)
+LDFLAGS += -Wl,--defsym=EE_BANK_BASE=$(EE_BANK_BASE) -Wl,--defsym=EE_BANK_SIZE=$(EE_BANK_SIZE)
 
 # Set linker-script name depending on selected submodel name
 LDFLAGS += -T$(LINKERSCRIPTPATH)/link_$(BOARD)_memory.ld
